# gemmajudge

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  AI_TOOL_DISCLOSURE.md  DEPLOY.md  Dockerfile  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  container.yml
data/: judge_dataset_report.md  judge_train.jsonl  judge_val.jsonl
deck/: build_deck.py
docs/: FINE_TUNING.md  FIREWORKS_FINETUNE.md  HACKATHON_COMPLIANCE.md
docs/amd_proof/: README.md  mi300x_gemma.ipynb  serve_gemma_mi300x.sh
docs/amd_proof/mi300x/: attacker_prompt.md  eval_result.json  eval_summary.json  notes.md  rocm_smi.txt  serve_command.txt  versions.txt
docs/amd_proof/w7900/: eval_result.json  notes.md  rocm_smi.txt  versions.txt
docs/fine_tune_eval/: README.md  report.json
docs/real_runs/: README.md  gemma27b_judge_vs_glm.txt  leaderboard.json  leaderboard_table.txt
docs/superpowers/plans/: 2026-07-08-streamlit-mission-control-frontend.md
gemmajudge/: __init__.py  attacker.py  client.py  config.py  demo.py  judge.py  leaderboard.py  leaderboard_demo.py  offline.py  orchestrator.py  schemas.py  target.py
gemmajudge/prompts/: __init__.py  attacker_bias.md  attacker_hallucination.md  attacker_jailbreak.md  judge_bias.md  judge_hallucination.md  judge_jailbreak.md
gemmajudge/utils/: __init__.py  cost.py
scripts/: build_judge_dataset.py  build_judge_training_mix.py  check_rocm_training_env.py  convert_judge_dataset_fireworks.py  eval_judge_model.py  eval_judge_transformers.py  probe_fireworks.py  run_amd_proof.py
tests/: conftest.py  test_amd_proof_runner.py  test_app.py  test_attacker.py  test_client.py  test_config.py  test_demo.py  test_judge.py  test_judge_dataset_builder.py  test_leaderboard.py  test_offline.py  test_orchestrator.py  test_prompts.py  test_review_fixes.py  test_rocm_preflight.py  test_schemas.py  test_target.py
training/: train_gemmajudge_lora.py
(+1 files in other folders)
