[project]
name = "gemmajudge"
version = "0.1.0"
description = "Adversarial LLM evaluation, powered by Gemma on AMD."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
