[project]
name = "gemmajudge"
version = "0.1.0"
description = "Adversarial LLM evaluation, powered by Gemma on AMD."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py311"
# docs/ holds deploy artifacts (the AMD MI300X notebook) written in notebook idiom —
# per-cell re-imports, shell escapes, %-format. Don't lint them as library source.
extend-exclude = ["docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `import gemmajudge` and `from tests.conftest ...`
# resolve under a bare `pytest` invocation (CI), not only under `python -m pytest`.
pythonpath = ["."]
