[project]
name = "gemmajudge"
version = "0.1.0"
description = "Adversarial LLM evaluation, powered by Gemma on AMD."
requires-python = ">=3.11"
license = { text = "Apache-2.0" }

[tool.ruff]
line-length = 100
target-version = "py311"
# docs/ and deck/ hold artifacts (the AMD MI300X notebook, the pitch-deck generator)
# with notebook idiom and long slide-copy strings. Don't lint them as library source.
extend-exclude = ["docs", "deck"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Put the repo root on sys.path so `import gemmajudge` and `from tests.conftest ...`
# resolve under a bare `pytest` invocation (CI), not only under `python -m pytest`.
pythonpath = ["."]
